--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /*  your css code here. If applicable */
+.container{
+	width:400px;
+	margin:40px auto;
+	border:2px solid black;
+	height:150px;
+	border-radius:40px;
+	text-align:center;
+	background-color:grey
+}
+.red, .green, .yellow{
+	border:2px solid black;
+	width:40px;
+	height:40px;
+	border-radius:50%;
+	display:inline-block;
+	padding:10px;
+	margin:35px 10px;
+	border:none;
+}
+.red{
+	background-color:green
+}
+.green{
+	background-color:yellow
+}
+.yellow{
+	background-color:red;
+}
