--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,11 @@
 	border:none;
 }
 .red{
-	background-color:green
+	background-color:rgb(255, 0, 0)
 }
 .green{
-	background-color:yellow
+	background-color:rgb(255, 255, 0)
 }
 .yellow{
-	background-color:red;
+	background-color:rgb(0, 128, 0);
 }
