--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,10 @@
 	height:150px;
 	border-radius:40px;
 	text-align:center;
-	background-color:grey
+	background-color:grey;
+	display:flex;
+	flex-direction:row-reverse;
+	justify-content:center;
 }
 .red, .green, .yellow{
 	border:2px solid black;
@@ -18,12 +21,14 @@
 	margin:35px 10px;
 	border:none;
 }
-.red{
-	background-color:rgb(255, 0, 0)
+.red {
+	background-color: rgb(255, 0, 0);
 }
-.green{
-	background-color:rgb(255, 255, 0)
+
+.yellow {
+	background-color: rgb(255, 255, 0); 
 }
-.yellow{
-	background-color:rgb(0, 128, 0);
+
+.green {
+	background-color: rgb(0, 128, 0); 
 }
